# Calculator1

Calculator1/: pyproject.toml
Calculator1/calculator/: calculator.py
Calculator1/tests/: test_calculator.py
