name = "Calculator1"
version = "0.0.1"
authors = [{name = "Mustafa Akgul", email = "akgul037@gmail.com"}]
license = {file = "LICENSE"}
description = "A small simple calculator package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = ["License :: OSI Approved :: MIT License"]

[project.urls]
Home = "https://github.com/mustafaakgl/Calculator1.git"


